--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Bienvenido a <%= title %></p>
+	<p> El Portal donde podra crear sus propios juegos </p>
+	<p> <a href="/quizes/question"> Comience a jugar </a> </p>
   </body>
 </html>
