Modificaciones solicitadas en P2P

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,8 @@
     <p>Bienvenido a <%= title %></p>
 	<p> El Portal donde podra crear sus propios juegos </p>
 	<p> <a href="/quizes/question"> Comience a jugar </a> </p>
+	
+	<p> <a href="/author/autor"> Sobre el autor </a> </p>
+	
   </body>
 </html>
