--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 <div id="page-wrap">
 
 <header class="main" id="h1">
-<h2> Quiz: el juego de las pregntas </h2>
+<h2> Quiz: el juego de las preguntas </h2>
 </header>
 
 <nav class="main" id="n1" role="navigation">
@@ -24,6 +24,10 @@
 <footer class = "main" id="f1">
 <a href="http://es.wikipedia.org/wiki/Quiz">
 ¿Que es Quiz? </a>
+<br><br>
+<a href="https://github.com/trelabartero/quiz.git">
+Mi proyecto en GitHub</a>
+
 </footer>
 </div>
 </body>
